--- a/about.html
+++ b/about.html
@@ -4,21 +4,26 @@
 	<title>WWF - ABOUT</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css"  href="css/wwfstyle.css">
     <link rel="stylesheet" type="text/css"  href="css/normalize.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet"  href="css/wwfstyle.css">
+
 </head>
 <body>
     <div class="container">
+<!--
         <div class="logo">
             <img src="img/WWF_logo.svg.png">
         </div>
+-->
         <nav class="navbar navbar-default">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="glyphicon glyphicon-menu-hamburger"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">WWF</a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/WWF_logo.svg.png">
+                </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav nav-pills navbar-right">
@@ -122,6 +127,9 @@
     </div>
     <div class="container">
         <div class="jumbotron">
+            <div class="logo">
+                <img src="img/WWF_logo.svg.png">
+            </div>
             <h1 class="center">ABOUT US</h1>
         </div>
         <div>
@@ -133,42 +141,84 @@
         </div>
         <div>
             <h2 class="center">How we work</h2>
-            <p> We work globally in 6 key areas</p>
-            <div class="maingrp">
-                <div class="group"><img src="img/forest_icon.png">
-                    <p>Forests</p>
-                    <p>Conserve the world's most important forests.</p>
+            
+        </div>
+        <div class="container">
+            <div class="row">
+                <h3> We work globally in 6 key areas</h3>
+                <div class=" col-md-4 col-sm-4">
+                    <div class="thumbnail">
+                        <img src="img/forest_icon.png">
+                        <div class="caption">
+                            <h3>Forests</h3>
+                            <p>Conserve the world's most important forests.</p>
+                        </div>
+                    </div> 
                 </div>
-                <div class="group"><img src="img/oceans_icon.png">
-                    <p>Oceans</p>
-                    <p>Safeguard healthy oceans and marine livelihoods.</p>
+                <div class="work col-md-4 col-sm-4">
+                    <div class="thumbnail">
+                        <img src="img/oceans_icon.png">
+                        <div class="caption">
+                            <h3>Oceans</h3>
+                            <p>Safeguard healthy oceans and marine livelihoods.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="group"><img src="img/freshwater_icon.png">
-                    <p>Freshwater</p>
-                    <p>Secure water for people and nature.</p>
-                </div>
-                <div class="group"><img src="img/wildlife_icon.png">
-                    <p>Wildlife</p>
-                    <p>Protect the world's most important species.</p>
-                </div>
-                <div class="group"><img src="img/food_icon.png">
-                    <p>Food</p>
-                    <p>Double net food availability; freeze its footprint.</p>
-                </div>
-                <div class="group"><img src="img/climate_icon.png">
-                    <p>Climate</p>
-                    <p>Create a climate-resilient and zero-carbon world, powered by renewable energy.</p>
+                <div class="work col-md-4 col-sm-4">
+                     <div class="thumbnail">
+                        <img src="img/freshwater_icon.png">
+                         <div class="caption">
+                            <h3>Freshwater</h3>
+                            <p>Secure water for people and nature.</p>
+                         </div>
+                    </div>
                 </div>
             </div>
-            <div>
-                <h2 class="center">Together We Can Do It!</h2>
-                <div>
+            <div class="row">
+                <div class="col-md-4 col-sm-4">
+                    <div class="thumbnail">
+                        <img src="img/wildlife_icon.png">
+                        <div class="caption">
+                            <h3>Wildlife</h3>
+                            <p>Protect the world's most important species.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4">
+                     <div class="thumbnail">
+                        <img src="img/food_icon.png">
+                        <div class="caption">
+                            <h3>Food</h3>
+                            <p>Double net food availability; freeze its footprint.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4">
+                     <div class="thumbnail">
+                        <img src="img/climate_icon.png">
+                         <div class="caption">
+                            <h3>Climate</h3>
+                            <p>Create a climate-resilient and zero-carbon world, powered by renewable energy.</p>
+                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">   
+                <div class="col-md-6">
+                    <h2 class="center">Together We Can Do It!</h2>
+                    <p>Together, we can achieve WWF’s mission to conserve nature and reduce the most pressing threats to the diversity of life on Earth.</p>
+                    <p>WWF-US is part of the WWF global network which has worked for more than 50 years to protect the future of nature.</p>
+                    <p>In 2016, WWF embraced a bold new strategy and transformation designed to make the organization stronger and even more effective in tackling the challenges ahead. </p>
                     <p>In this video, Marco Lambertini, Director General, WWF International, talks about WWF’s new way of working and commitment to conservation results.</p>
                 </div>
-                <iframe width="100%" src="https://www.youtube.com/embed/lW7Th-kF8YQ" frameborder="0" allowfullscreen="" style="height: 445.5px;"></iframe>
-                <p>Together, we can achieve WWF’s mission to conserve nature and reduce the most pressing threats to the diversity of life on Earth.</p>
-                <p>WWF-US is part of the WWF global network which has worked for more than 50 years to protect the future of nature.</p>
-                <p>In 2016, WWF embraced a bold new strategy and transformation designed to make the organization stronger and even more effective in tackling the challenges ahead. </p>
+                <div class="col-md-6">
+                    <div class="embed-responsive embed-responsive-4by3">
+                        <iframe class=" sidegrp embed-responsive-item"  src="https://www.youtube.com/embed/lW7Th-kF8YQ" ></iframe>
+<!--                        <iframe width="100%" src="https://www.youtube.com/embed/lW7Th-kF8YQ" frameborder="0" allowfullscreen="" style="height: 445.5px;"></iframe>-->
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -179,4 +229,5 @@
     </footer>
     <script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+     <script src="js/wwf.js"></script>
 </body>
