new updates to css April 10th

--- a/donate.html
+++ b/donate.html
@@ -4,9 +4,9 @@
 	<title>WWF - DONATE</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css"  href="css/wwfstyle.css">
     <link rel="stylesheet" type="text/css"  href="css/normalize.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css"  href="css/wwfstyle.css">
 </head>
 <body>
     <div class="container">
@@ -125,7 +125,7 @@
         </div>
     </div>
     
-    <div class="container">
+    <div class="main container">
         <div class="jumbotron">
             <div class="logo">
                 <img src="img/WWF_logo.svg.png">
@@ -696,8 +696,25 @@
         </form>
     </div>
     <footer>
-        <div>
+        <div class="floatleft">
             <p> &copy;2017 WWF, All Rights reserved.</p>
+        </div>
+        <div>
+            <nav class=" floatright footer-nav">
+                <ul>
+
+                    <li><a href="https://www.facebook.com/wwf/" title="facebook" target="_blank"><img src="img/footer-fb.png" alt="facebook"></a></li>
+
+
+                    <li><a href="https://twitter.com/wwf" title="Twitter" target="_blank"><img src="img/footer-twitter.png" alt="Twitter"></a></li>
+
+
+                    <li><a href="http://instagram.com/wwf/" title="Instagram" target="_blank"><img src="img/footer-insta.png" alt="Instagram"></a></li>
+
+                    <li><a href="https://www.youtube.com/user/wwf" title="YouTube" target="_blank"><img src="img/footer-yt.png" alt="YouTube"></a></li>
+
+                </ul>
+            </nav>
         </div>
     </footer>
     <script src="js/jquery.min.js"></script>
