--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <span class="glyphicon glyphicon-menu-hamburger"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="img/WWF_logo.svg.png">
+                    <img  class="img-thumbnail" src="img/WWF_logo.svg.png">
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
